# Invoice-Automation

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  database.py  main.py
app/agents/: duplicate_agent.py  extraction_agent.py  graph.py  save_agent.py  template_agent.py  validation_agent.py
app/agents/tools/: invoice_tools.py
app/api/: invoices.py  reports.py  review.py
app/core/: exceptions.py  logging.py  utils.py
app/models/: invoice.py  vendor_template.py
app/prompts/: extraction_prompt.txt
app/services/: csv_exporter.py  duplicate_checker.py  llm_service.py  ocr_service.py  pdf_extractor.py  template_learning.py
scripts/: generate_csv.py  start_watcher.py
tests/: conftest.py  test_agents.py  test_services.py
ui/: streamlit_app.py
