[project]
name = "invoice-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite==0.20.0",
    "alembic==1.13.3",
    "asyncpg==0.29.0",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "langchain-core==0.3.56",
    "langchain-openai==0.3.13",
    "langgraph==0.3.30",
    "langgraph-checkpoint-sqlite==2.0.6",
    "openai==1.68.2",
    "pandas==2.2.3",
    "pdf2image==1.17.0",
    "pydantic-settings==2.6.1",
    "pymupdf==1.24.12",
    "pytesseract==0.3.13",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.36",
    "streamlit==1.40.0",
    "structlog==24.4.0",
    "uvicorn==0.30.0",
    "watchdog==5.0.3",
]
